--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -675,20 +675,19 @@ Nachdem betrachtet wurde, wie Verständnis funktioniert, stellt sich die Frage, 
 \section{Verwandte Arbeiten}
 \label{section:standderforschung:verwandte_arbeiten}
 
-In diesem Abschnitt werden verwandte Arbeiten behandelt.
+Im Folgenden werden verwandte Arbeiten behandelt. Zuerst befasst sich Abschnitt~\ref{section:standderforschung:verwandte_arbeiten:mashups} mit Mashupplattformen. Danach geht es um Visualisierungstools und Teilaspekte davon, die das Sensemaking der Nutzer verbessern sollen. Darauf folgen Konzepte zur User Assistance in Mashups und im Allgemeinen und zuletzt wird eine Zusammenfassung gegeben.
 
 \subsection{Webbasierte Mashup Plattformen}
+\label{section:standderforschung:verwandte_arbeiten:mashups}
 
-Es existieren ein paar andere Mashup-Plattformen als VizBoard, aber ich bin mir nicht sicher, ob die tatsächlich in meine Arbeit gehören. Ich entwickle kein Mashup.
+Yahoo Pipes\footnote{\url{http://pipes.yahoo.com/pipes/}} ist eine Mashup-Plattform von Yahoo, bei dem der Benutzer verschiedene Webservices und Operatoren kombiniert, indem er sie verdrahtet. Pipes erfüllt die funktionale Anforderung \emph{Intro}, da zwei Tutorialvideos angeboten werden und eine kurze Beschreibung zu jedem Element inklusive Link zu einem Beispiel und mehr Informationen vorhanden ist. Die \emph{Kommunikation} ist durch die Drähte sichtbar, allerdings ist die Richtung des Datenflusses nicht sofort eindeutig. Pipes erleichtert die \emph{Bedienung} indem mögliche Anknüpfungspunkte für Drähte blau eingefärbt werden. Für VizBoard ist es ebenfalls wichtig, die
 
-Yahoo Pipes\footnote{\url{http://pipes.yahoo.com/pipes/}}
+DashMash \cite{Cappiello2011} ist eine Mashup-Plattform, die besonders auf Endnutzer ausgerichtet ist. Dazu setzt es auf das \enquote{What You See Is What You Get} Prinzip und abstrahiert von Mashup-Interna wie dem Binding zwischen Datenquellen und Komponenten. DashMash ist auf die Domäne der \enquote{Sentiment Analysis} ausgerichtet, also auf Analyse von Stimmungsbildern. Obwohl keine sichtbaren\footnote{Ein Demo-Video ist unter \url{http://home.dei.polimi.it/cappiell/demo/DemoDashMash.mov} verfügbar.} Hilfestellungen bezüglich \emph{Intro},\emph{Bedienung} oder \emph{Kommunikation} verfügbar sind, fiel die Nutzerstudie mit 35~Teilnehmern durchweg positiv aus. Für die Hilfe in VizBoard sollte deswegen auch soweit möglich Technisches abstrahiert oder vor dem Benutzer versteckt werden.
 
-Apache Rave\footnote{\url{http://rave.apache.org/}}
-
-DashMash \cite{Cappiello2011}
-
+Apache Rave\footnote{\url{http://rave.apache.org/}} ist eine Mashup-Plattform von Apache und die Grundlage für OMELETTE \cite{Chudnovskyy2012}. OMELETTE stellt dem Benutzer verschiedene Widgets zur Verfügung, die er kombinieren kann. Zum Beispiel ein Widget für den Wasserpegel und eine Karte, die Hochwassermeldungen zeigt. Im Gegensatz zu VizBoard besteht keine Einschränkung auf eine bestimmte Domäne. Es ist möglich Widgets zu kommentieren, die \emph{Kommentare} werden aber nur im Widget Store angezeigt. Bezüglich der \emph{Bedienung} oder \emph{Kommunikation} bestehen keine Hilfestellungen. Ein \emph{Intro} wird im Widget Store in Form einer kurzen Beschreibung gegeben. % gelernt?
 
 \subsection{Visualisierungstools}
+\label{section:standderforschung:verwandte_arbeiten:visualisierungstools}
 
 infogr.am\footnote{\url{http://infogr.am/}} ermöglicht es Benutzern, statische Infografiken und Charts zu erstellen. Die dargestellten Daten sind in einer Tabelle enthalten, die hochgeladen und online bearbeitet werden kann. Danach kann die Visualisierung veröffentlicht und in Social Networks gepostet werden. Der Webservice besitzt nur eingeschränkte Funktionalität, ist aber einfach zu benutzen und sieht gut aus, was für Endnutzer eine gute Kombination ist.
 
@@ -704,6 +703,7 @@ Weave\footnote{\url{http://oicweave.org/}} ist eine Webapplikation, mit der Benu
 Tableau\footnote{\url{http://www.tableausoftware.com/}} ist eine Desktopapplikation, mit der aus Tabellen oder Datenbanken Diagramme erstellt werden können. Dabei wird das Prinzip von \enquote{Semantic Transparency} umgesetzt, weil der Benutzer die zu visualisierenden Daten per Drag \& Drop auf dem Diagramm platziert. \textbf{Und?}
 
 \subsubsection{Sensemaking}
+\label{section:standderforschung:verwandte_arbeiten:sensemaking}
 
 % Sandbox \cite{Wright2006} ist ein Prototyp einer Desktopanwendung, die den Prozess des Sensemakings unterstützen soll. Dazu kann der Benutzer Informationen ähnlich Post-Its auf einer Canvas anordnen und mit Hilfe von Gesten gruppieren, Platz schaffen oder löschen. Informationsvisualisierungen kommen dabei nicht zum Einsatz.
 
@@ -738,6 +738,10 @@ Forsell und Johansson \cite{Forsell2010} führten eine Nutzerstudie durch, um au
 Grammel \cite{Grammel2012} verfasste seine Doktorarbeit zum Thema, wie InfoVis-Anfänger Visualisierungen konstruieren. Um sie dabei zu unterstützen, schlägt er unter anderem vor, ihr mentales Modell zu verwenden (z.\,B. mit ihnen bekannten Begriffen) und es ihnen zu erleichtern, mehr über InfoVis zu lernen.
 
 Shrinivasan et al. \cite{Shrinivasan2008} entwickelten ein Framework zur Informationsvisualisierung, welches den menschlichen Verständnisprozess unterstützen soll. Es besteht aus drei verschiedenen Views: Der InfoVis selbst, einem \enquote{Knowledge View} und einem \enquote{Navigation View}. Im Knowledge View kann der Benutzer seine Hypothesen und Analysen verwalten bzw. überprüfen, der Navigation View erlaubt es ihm, zu einem beliebigen Punkt im Laufe der Interaktionen zurück zu gehen. In einer Nutzerstudie fanden die vier Probanden den Knowledge View sehr nützlich.
+
+\subsection{Zusammenfassung}
+
+badasdfsdf
 
 \section{Zusammenfassung}
 \label{section:standderforschung:zusammenfassung}
